@@ -6,6 +6,7 @@ FormItBuilder 1.3.3-pl
 - Added methods to set / get redirectParams for the redirect FormIt hook.
 - Added $o_form->setSubmitVar('myCustomSubmitVar') to allow processing to be ignored or run only in certain conditions.
 - Replaced all inbuilt FormIt post check calls (like FormItIsSelected, FormItIsChecked and any other +fi. placeholder). Replaced with own processing (faster).
+- Added Matrix Element (with text, radio and checkbox types)
 
 FormItBuilder 1.3.2-pl
 ====================================
